Migrate project from Arbitrum to Base blockchain

--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
   "scripts": {
     "test": "hardhat test",
     "test:coverage": "hardhat coverage",
+    "test:gas": "REPORT_GAS=true hardhat test",
     "compile": "hardhat compile",
     "clean": "hardhat clean",
     "lint": "solhint 'contracts/**/*.sol'",
     "lint:fix": "solhint 'contracts/**/*.sol' --fix",
     "slither": "slither .",
+    "prettier": "prettier --write 'contracts/**/*.sol'",
     "deploy:local": "hardhat run scripts/deploy.js --network hardhat",
-    "deploy:testnet": "hardhat run scripts/deploy.js --network arbitrumTestnet"
+    "deploy:testnet": "hardhat run scripts/deploy.js --network baseTestnet",
+    "verify": "hardhat verify",
+    "docs:generate": "solidity-docgen --solc-module solc-0.8.17"
   },
   "keywords": [
     "ethereum",
-    "arbitrum",
+    "base",
     "solidity",
     "hardhat",
     "betting",
@@ -27,19 +31,29 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
-    "@nomicfoundation/hardhat-ethers": "^3.0.0",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
-    "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.3",
+    "@nomicfoundation/hardhat-ethers": "^3.0.5",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.10",
+    "@nomicfoundation/hardhat-verify": "^2.0.3",
     "chai": "^4.5.0",
-    "ethers": "^6.10.0",
+    "ethers": "^6.11.1",
     "hardhat": "^2.22.8",
     "hardhat-gas-reporter": "^1.0.10",
     "solhint": "^4.1.1",
+    "solhint-plugin-prettier": "^0.1.0",
     "solidity-coverage": "^0.8.11",
-    "@typechain/ethers-v6": "^0.5.0",
-    "@typechain/hardhat": "^9.0.0",
-    "typechain": "^8.3.0"
+    "@typechain/ethers-v6": "^0.5.1",
+    "@typechain/hardhat": "^9.1.0",
+    "typechain": "^8.3.2",
+    "prettier": "^3.2.5",
+    "prettier-plugin-solidity": "^1.3.1",
+    "solidity-docgen": "^0.6.0-beta.36",
+    "slither-analyzer": "^0.10.0",
+    "hardhat-contract-sizer": "^2.10.0",
+    "@openzeppelin/hardhat-upgrades": "^3.0.4",
+    "mocha": "^10.2.0",
+    "sinon": "^17.0.1",
+    "dotenv-safe": "^8.2.0"
   },
   "dependencies": {
     "@openzeppelin/contracts-upgradeable": "^4.9.6",
