Pre-migration checkpoint: EVM betting platform - Shin2Chin complete

--- a/package.json
+++ b/package.json
@@ -30,32 +30,37 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@modelcontextprotocol/server-filesystem": "^2025.3.28",
+    "@modelcontextprotocol/server-github": "^2025.4.8",
+    "@modelcontextprotocol/server-memory": "^2025.4.25",
+    "@modelcontextprotocol/server-sequential-thinking": "^0.6.2",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.3",
     "@nomicfoundation/hardhat-ethers": "^3.0.5",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.10",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.3",
+    "@openzeppelin/hardhat-upgrades": "^3.0.4",
+    "@typechain/ethers-v6": "^0.5.1",
+    "@typechain/hardhat": "^9.1.0",
     "chai": "^4.5.0",
+    "dotenv-safe": "^8.2.0",
     "ethers": "^6.11.1",
+    "figma-developer-mcp": "^0.3.0",
     "hardhat": "^2.22.8",
+    "hardhat-contract-sizer": "^2.10.0",
     "hardhat-gas-reporter": "^1.0.10",
+    "mocha": "^10.2.0",
+    "prettier": "^3.2.5",
+    "prettier-plugin-solidity": "^1.3.1",
+    "sinon": "^17.0.1",
     "solhint": "^4.1.1",
     "solhint-plugin-prettier": "^0.1.0",
     "solidity-coverage": "^0.8.11",
-    "@typechain/ethers-v6": "^0.5.1",
-    "@typechain/hardhat": "^9.1.0",
-    "typechain": "^8.3.2",
-    "prettier": "^3.2.5",
-    "prettier-plugin-solidity": "^1.3.1",
     "solidity-docgen": "^0.6.0-beta.36",
-    "slither-analyzer": "^0.10.0",
-    "hardhat-contract-sizer": "^2.10.0",
-    "@openzeppelin/hardhat-upgrades": "^3.0.4",
-    "mocha": "^10.2.0",
-    "sinon": "^17.0.1",
-    "dotenv-safe": "^8.2.0"
+    "typechain": "^8.3.2"
   },
   "dependencies": {
+    "@heyanon/sdk": "^2.2.0",
     "@openzeppelin/contracts-upgradeable": "^4.9.6",
     "dotenv": "^16.4.5"
   }
