--- a/shin2chin-solana/Anchor.toml
+++ b/shin2chin-solana/Anchor.toml
@@ -1,9 +1,12 @@
+[toolchain]
+anchor_version = "0.31.1"
+
 [features]
 seeds = false
 skip-lint = false
 
 [programs.localnet]
-betting = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
+shin2chin_betting = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
 
 [registry]
 url = "https://api.apr.dev"
