🏗️ POOL REFACTOR: Archive P2P contracts & create pool system
✅ Day 1-2 Tasks Completed:
- Archive P2P contracts to /archived/p2p-contracts/
- Create new shin2chin_pool Anchor project
- Setup basic account structures (Event, Bet, BetStatus)
- Create stub instructions for 5 core functions
- Update Anchor.toml for new contract structure

🔧 Architecture:
- Event PDA: [b"event", admin, team_a, team_b]
- Bet accounts with timestamp for LIFO refunds
- Fixed 1.95x payout calculation
- Auto-balancing pool mechanism foundation

📝 Updated plan.md progress & changelog.md

Next: Implement place_bet with SOL transfers

--- a/shin2chin-solana/programs/shin2chin_pool/Cargo.toml
+++ b/shin2chin-solana/programs/shin2chin_pool/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "shin2chin_betting"
+name = "shin2chin_pool"
 version = "0.1.0"
-description = "Shin2Chin Solana Betting Program - Phase A Foundation"
+description = "Auto-balancing pool betting system for Shin2Chin"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "shin2chin_betting"
+name = "shin2chin_pool"
 
 [features]
 no-entrypoint = []
@@ -17,3 +17,4 @@ default = []
 
 [dependencies]
 anchor-lang = "0.31.1"
+anchor-spl = "0.31.1"
